image issue solve

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Hero Section -->
     <section id="hero-section">
       <div class="section-container">
-        <img src="../images/logo.png" alt="" class="mx-auto mt-32 mb-16" />
+        <img src="images/logo.png" alt="" class="mx-auto mt-32 mb-16" />
         <h3>A history of everything you copy</h3>
         <p class="section-content text-2xl mb-14">
           Clipboard allows you to track and organize everything you copy.
@@ -49,7 +49,7 @@
     <section id="feature-section" class="mt-20">
       <div class="section-container">
         <div class="flex gap-16 flex-col md:flex-row">
-          <div><img src="../images/image-computer.png" alt="" /></div>
+          <div><img src="images/image-computer.png" alt="" /></div>
           <div class="space-y-10">
             <div class="text-center md:text-left space-y-3">
               <h4>Quick Search</h4>
@@ -96,7 +96,7 @@
     <!-- Clipboard Image Section -->
     <section id="clipboard-image-section" class="mt-20">
       <div class="max-w-6xl mx-auto text-center px-0">
-        <img src="../images/image-devices.png" alt="" class="mx-auto" />
+        <img src="images/image-devices.png" alt="" class="mx-auto" />
       </div>
     </section>
     <!-- Clipboard Image Section-->
@@ -119,11 +119,7 @@
           class="flex flex-col md:flex-row justify-center mt-32 mb-40 gap-10"
         >
           <div class="flex flex-col items-center space-y-5 mb-6">
-            <img
-              src="../images/icon-blacklist.png"
-              alt=""
-              class="w-12 md:mb-6"
-            />
+            <img src="images/icon-blacklist.png" alt="" class="w-12 md:mb-6" />
             <h4>Create Blacklists</h4>
             <p class="max-w-[320px] text-darkGrayishblue text-md">
               Easily search your snippets by content, category, web address,
@@ -131,14 +127,14 @@
             </p>
           </div>
           <div class="flex flex-col items-center space-y-5 mb-6">
-            <img src="../images/icon-text.png" alt="" class="w-12 md:mb-6" />
+            <img src="images/icon-text.png" alt="" class="w-12 md:mb-6" />
             <h4>Plain Text Snippets</h4>
             <p class="max-w-[320px] text-darkGrayishblue text-md">
               Remove unwanted formatting from copied text for a consistent look.
             </p>
           </div>
           <div class="flex flex-col items-center space-y-5 mb-4">
-            <img src="../images/icon-preview.png" alt="" class="w-12 md:mb-6" />
+            <img src="images/icon-preview.png" alt="" class="w-12 md:mb-6" />
             <h4>Sneak Preview</h4>
             <p class="max-w-[320px] text-darkGrayishblue text-md">
               Quick preview of all snippets on your Clipboard for easy access.
@@ -154,11 +150,11 @@
       <div
         class="flex flex-col md:flex-row items-center justify-between max-w-6xl px-10 mx-auto space-y-16 md:space-y-0"
       >
-        <img src="../images/logo-google.png" alt="" />
-        <img src="../images/logo-ibm.png" alt="" />
-        <img src="../images/logo-microsoft.png" alt="" />
-        <img src="../images/logo-hp.png" alt="" />
-        <img src="../images/logo-vector-graphics.png" alt="" />
+        <img src="images/logo-google.png" alt="" />
+        <img src="images/logo-ibm.png" alt="" />
+        <img src="images/logo-microsoft.png" alt="" />
+        <img src="images/logo-hp.png" alt="" />
+        <img src="images/logo-vector-graphics.png" alt="" />
       </div>
     </section>
     <!-- Sponsor Section -->
@@ -185,7 +181,7 @@
     <footer class="bg-gray-100">
       <div class="section-container">
         <div class="flex justify-between items-center">
-          <div><img src="../images/logo.png" alt="" class="scale-50" /></div>
+          <div><img src="images/logo.png" alt="" class="scale-50" /></div>
           <div
             class="flex flex-col items-center justify-between mb-10 space-y-6 md:flex-row md:mb-0 md:space-y-0 text-grayishBlue flex-1 py-6"
           >
@@ -214,9 +210,9 @@
           </div>
           <div>
             <div class="flex gap-7">
-              <img src="../images/icon-facebook.png" alt="" />
-              <img src="../images/icon-twitter.png" alt="" class="w-full" />
-              <img src="../images/icon-instagram.png" alt="" />
+              <img src="images/icon-facebook.png" alt="" />
+              <img src="images/icon-twitter.png" alt="" class="w-full" />
+              <img src="images/icon-instagram.png" alt="" />
             </div>
           </div>
         </div>
